# Common-Japanese-Morphemes-in-YOASOBI-Lyrics

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  azure-pipelines.yml  convert_morpheme_to_word.py  docker-compose-build.yml  docker-compose.yml  html_test.html  main.py  pyproject.toml  pytest_report.html  requirements.txt  test.py  test_result.html  visualize.py  yoasobi.db  yoasobiscraper.py
.github/: dependabot.yml
.github/workflows/: cloudbuild.yaml  codeql.yml  docker-build.yml  docker-ci.yml  docker-push.yml  python-app.yml  python-test.yml  python_app.yml  scraper-test.yml  trivy-scan.yml
codes/: extract.py  sql_query.py  sqlite_db.py  utils.py  web_scrap.py
docs/: VISUALS.md
e2e_test/: README.md  docker-compose.yml  run_test.ps1  run_test.sh
lyrics/: template.json
morphemes_extractor/: data_extractor.py  data_transformer.py  db_func.py  jp_data.py  json_utils.py  logger_config.py  sql_query.py  utils.py
morphemes_extractor/lyrics/: Butai_ni_tatte.json  biri_biri.json  heartbeat.json  monotone.json  the_book.json  the_book_2.json  the_book_3.json  undead.json
scraper/: data_extractor.py  data_transformer.py  db_func.py  utils.py  web_scraper.py
tests/: test.py  test_convert_morpheme_to_word.py  test_full_process.py  test_main.py  yoasobi_undead_lyrics.html
tests/test_convert_morpheme_to_word/: test_combine_morpheme_to_word.py  test_get_pos_from_word.py
tests/test_data_extractor/: test_extract_data.py  test_extract_lyrics_from_lyrics_list.py  test_extract_morpheme_from_lyrics.py  test_extract_part_of_speech_from_morphemes.py  test_extract_part_of_speech_from_words.py  test_extract_romanji.py  test_extract_romanji_from_morphemes.py  test_extract_romanji_from_words.py  test_extract_song_name_from_lyrics_list.py  test_extract_words_from_lyrics.py  test_get_morphemes_from_songs.py  test_get_song_list.py  test_is_english.py
tests/test_data_transformer/: test_transform_data_to_df.py
tests/test_db_func/: test_save_to_db.py  test_save_to_sqlite.py
tests/test_json_utils/: test_combine_json_data.py  test_find_json_files.py  test_load_json.py  test_load_json_file.py
tests/test_utils/: test_check_list_len.py
tests/test_web_scraper/: test_async_fetch_page_sources.py  test_get_lyrics_list.py
yoasobi_pipeline/: pipeline.py
yoasobi_pipeline/yoasobi_scraper/: data_extractor.py  sql_query.py  sqlite_db.py  web_scraper.py
yoasobi_project/: __init__.py  extract.py  sql_query.py  sqlite_db.py  utils.py  web_scrap.py
yoasobi_project_package/: extract.py  sqlite_db.py  utils.py
